# CodeX

./: .golangci.yml  .goreleaser.yaml  CONTRIBUTING.md  README.md  codex.json  codex.md  codex.sh  go.mod  go.sum  install.sh
.github/ISSUE_TEMPLATE/: 01-bug.yaml  03-package-bug.yaml  04-package-request.yaml
.github/workflows/: cache-upload.yml  cli-post-release.yml  cli-release.yml  cli-tests.yaml  docker-image-release.yml  vscode-ext-release.yaml
.schema/: codex-plugin.schema.json  codex.schema.json
cmd/codex/: main.go
docs/: Dockerfile  README.md  launchpad.yaml
docs/app/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/translation/: README-ko-KR.md  README-zh-CN.md
examples/: .gitignore  README.md
examples/data_science/pytorch/basic-example/: README.md  pyproject.toml
examples/flakes/: README.md
examples/insecure/: codex.json
examples/tutorial/: README.md
internal/boxcli/: add.go  args.go  auth.go  cache.go  cloud.go  config.go  create.go  env.go  gen-docs.go  generate.go  global.go  info.go  init.go  install.go  integrate.go  list.go  log.go  path.go  pull.go  push.go  rm.go  root.go  run.go  search.go  secrets.go  services.go  setup.go  shell.go  shellenv.go  update.go  version.go
internal/cachehash/: hash.go
plugins/: README.md  apacheHttpd.json  caddy.json  mariadb.json  mysql.json  nginx.json  nodejs.json  php.json  pip.json  poetry.json  python.json  redis.json  rustup.json  valkey.json
testscripts/: README.md  testscripts_test.go
vscode-extension/: CHANGELOG.md  README.md  package.json
(+509 files in other folders)
